# py-project-generator

./: Cargo.toml  README.md
src/: main.rs  python_project.rs
