[package]
name = "py-project-generator"
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version  = "0.11.10", features = ["blocking", "json"] }
